update .gitignore/typo README/reduce screenshot size

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,10 @@
 *.skc
 *.err
 
+# generation outpu directories
+model/scade-display/DisplayPanel/
+model/scade-display/DisplayPanel_Simulation/
+model/scade-display/DisplayPanel_Exe/
+
+
+model/scade-test/Test_TEE/
