--- a/.gitignore
+++ b/.gitignore
@@ -10,10 +10,8 @@
 *.skc
 *.err
 
-# generation outpu directories
+# generation output directories
 model/scade-display/DisplayPanel/
 model/scade-display/DisplayPanel_Simulation/
 model/scade-display/DisplayPanel_Exe/
-
-
 model/scade-test/Test_TEE/
