--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -55,7 +55,7 @@ jobs:
   release:
     name: "Release project"
     runs-on: ubuntu-latest
-    needs: [build-library]
+    needs: [doc-build]
     if: github.event_name == 'push' && contains(github.ref, 'refs/tags')
     steps:
       - name: "Release to GitHub"
@@ -68,7 +68,7 @@ jobs:
     name: "Deploy development documentation"
     # Deploy development only when merging or pushing to the 'main' branch
     runs-on: ubuntu-latest
-    needs: [build-library]
+    needs: [doc-build]
     if: github.event_name == 'push' && !contains(github.ref, 'refs/tags')
     steps:
       - uses: ansys/actions/doc-deploy-dev@v6
