--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -51,8 +51,7 @@ jobs:
 
       - name: "Zipping the standalone directory"
         run: |
-          sudo apt-get install zip
-          zip -r SmartBoilerStandalone.zip ./model/scade-display/DisplayPanel_Exe
+          powershell Compress-Archive ./model/scade-display/DisplayPanel_Exe SmartBoilerStandalone.zip
 
       - name: "Upload zip to artifacts"
         uses: actions/upload-artifact@v4
