--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -73,6 +73,7 @@ jobs:
           skip-install: true
           use-python-cache: false
           dependencies: "texlive-fonts-extra qpdf"
+          check-links: false
 
       # - name: "Zipping the examples directory"
       #   run: |
