--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -93,7 +93,7 @@ jobs:
   release:
     name: "Release project"
     runs-on: ubuntu-latest
-    needs: [doc-build]
+    needs: [standalone-display]
     if: github.event_name == 'push' && contains(github.ref, 'refs/tags')
     steps:
       - name: "Release to GitHub"
@@ -106,7 +106,7 @@ jobs:
     name: "Deploy development documentation"
     # Deploy development only when merging or pushing to the 'main' branch
     runs-on: ubuntu-latest
-    needs: [doc-build]
+    needs: [standalone-display]
     if: github.event_name == 'push' && !contains(github.ref, 'refs/tags')
     steps:
       - uses: ansys/actions/doc-deploy-dev@v6
