--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -1,4 +1,4 @@
-name: GitHub CI
+name: CI
 on:
   pull_request:
   push:
@@ -10,9 +10,8 @@ on:
 
 env:
   MAIN_PYTHON_VERSION: '3.10'
-  DOCUMENTATION_CNAME: 'examples.scade.docs.pyansys.com'
-  LIBRARY_NAME: 'ansys-scade-examples'
-  LIBRARY_NAMESPACE: 'ansys.scade.examples'
+  DOCUMENTATION_CNAME: 'smart-boiler-control.examples.scade.docs.pyansys.com'
+  LIBRARY_NAME: 'ansys-scade-examples-smart-boiler-control'
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -32,7 +31,7 @@ jobs:
     name: "Build documentation"
     runs-on: ubuntu-latest
     timeout-minutes: 30
-    needs: [doc-style]
+    needs: doc-style
     steps:
       - uses: ansys/actions/doc-build@v6
         with:
@@ -42,22 +41,8 @@ jobs:
           dependencies: "texlive-fonts-extra qpdf"
           check-links: false
 
-      # - name: "Zipping the examples directory"
-      #   run: |
-      #     sudo apt-get install zip
-      #     zip -r examples.zip ./examples
-
-      # - name: "Upload zip to artifacts"
-      #   uses: actions/upload-artifact@v4
-      #   with:
-      #     name: examples
-      #     path: ./examples.zip
-      #     retention-days: 7
-      #     if-no-files-found: error
-
   standalone-display:
     name: "Standalone Display"
-    # runs-on: ${{ matrix.os }}
     runs-on: [self-hosted, 'SCADE']    
     strategy:
       matrix:
@@ -106,7 +91,7 @@ jobs:
     name: "Deploy development documentation"
     # Deploy development only when merging or pushing to the 'main' branch
     runs-on: ubuntu-latest
-    needs: [standalone-display]
+    needs: standalone-display
     if: github.event_name == 'push' && !contains(github.ref, 'refs/tags')
     steps:
       - uses: ansys/actions/doc-deploy-dev@v6
@@ -124,10 +109,6 @@ jobs:
     steps:
       - uses: ansys/actions/doc-deploy-stable@v6
         with:
-          doc-artifact-name: 'documentation-html'
           cname: ${{ env.DOCUMENTATION_CNAME }}
           token: ${{ secrets.GITHUB_TOKEN }}
-
-
-
 
