--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -92,7 +92,7 @@ jobs:
     # Deploy development only when merging or pushing to the 'main' branch
     runs-on: ubuntu-latest
     needs: standalone-display
-    if: github.event_name == 'push' && !contains(github.ref, 'refs/tags')
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     steps:
       - uses: ansys/actions/doc-deploy-dev@v7
         with:
