fix: update readme file

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -1,7 +1,7 @@
 documentation:
-  - all:
+  - any:
       - changed-files:
-          - any-glob-to-any-file: ['doc/source/**/*.rst']
+          - any-glob-to-any-file: ['doc/source/**/*.rst, README.rst']
 
 maintenance:
   - any:
