--- a/requirements/requirements_doc.txt
+++ b/requirements/requirements_doc.txt
@@ -8,5 +8,6 @@ sphinx-autodoc-typehints==2.1.0
 sphinxcontrib-globalsubs==0.1.1
 sphinxcontrib-httpdomain==1.8.1
 sphinx-copybutton==0.5.2
+sphinx_design==0.6.1
 sphinxnotes-strike==1.2.1
 
