add pass test in the conf

--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -58,7 +58,7 @@ jobs:
         os: [windows-latest]
         scade-version: ['24.2']
       fail-fast: false
-    needs: [doc-build, code-style]
+    needs: [code-style]
     steps:
       - name: "Install Git and clone project"
         uses: actions/checkout@v4
@@ -85,7 +85,7 @@ jobs:
   scade-test-display:
     name: "Run Test Execution"
     runs-on: [self-hosted, 'SCADE']
-    needs: [doc-build, code-style]
+    needs: [code-style]
     steps:
       - name: "Checkout code"
         uses: actions/checkout@v4
