--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -108,7 +108,7 @@ jobs:
   release:
     name: "Release project"
     runs-on: ubuntu-latest
-    needs: [standalone-display]
+    needs: [standalone-display, scade-test-display]
     if: github.event_name == 'push' && contains(github.ref, 'refs/tags')
     steps:
       - name: "Release to GitHub"
@@ -121,7 +121,7 @@ jobs:
     name: "Deploy development documentation"
     # Deploy development only when merging or pushing to the 'main' branch
     runs-on: ubuntu-latest
-    needs: standalone-display
+    needs: [standalone-display, scade-test-display]
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     steps:
       - uses: ansys/actions/doc-deploy-dev@v7
