--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -56,9 +56,9 @@ jobs:
     strategy:
       matrix:
         os: [windows-latest]
-        scade-version: ['24.1']
+        scade-version: ['24.2']
       fail-fast: false
-    needs: [doc-build, code-style]
+    needs: [code-style]
     steps:
       - name: "Install Git and clone project"
         uses: actions/checkout@v4
@@ -82,12 +82,33 @@ jobs:
           retention-days: 7
           if-no-files-found: error
 
+  scade-test-display:
+    name: "Run Test Execution"
+    runs-on: [self-hosted, 'SCADE']
+    needs: [code-style]
+    steps:
+      - name: "Checkout code"
+        uses: actions/checkout@v4
 
+      - name: "Get SCADE installation directory"
+        uses: ansys/scade-actions/get-scade-dir@v2
+        id: get-scade-dir
+        with:
+          scade-version: "24.2"
+
+      - name: "Execute tests"
+        uses: ansys/scade-actions/test-execute@v2
+        with:
+          scade-dir: ${{ steps.get-scade-dir.outputs.scade-directory }}
+          test-project: 'model/scade-test/SmartBoilerControl_Test.etp'
+          configuration: 'Test'
+          results-project: 'model/scade-test/SmartBoilerControl_Results.etp'
+          checkout: false
 
   release:
     name: "Release project"
     runs-on: ubuntu-latest
-    needs: [standalone-display]
+    needs: [standalone-display, scade-test-display]
     if: github.event_name == 'push' && contains(github.ref, 'refs/tags')
     steps:
       - name: "Release to GitHub"
@@ -100,7 +121,7 @@ jobs:
     name: "Deploy development documentation"
     # Deploy development only when merging or pushing to the 'main' branch
     runs-on: ubuntu-latest
-    needs: standalone-display
+    needs: [standalone-display, scade-test-display]
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     steps:
       - uses: ansys/actions/doc-deploy-dev@v7
