--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -117,7 +117,7 @@ jobs:
     name: "Deploy development documentation"
     # Deploy development only when merging or pushing to the 'main' branch
     runs-on: ubuntu-latest
-    needs: [standalone-display, scade-test-display]
+    needs: [standalone-display, scade-test-display, doc-build]
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     steps:
       - uses: ansys/actions/doc-deploy-dev@v7
