--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -63,16 +63,18 @@ jobs:
       - name: "Install Git and clone project"
         uses: actions/checkout@v4
 
-      - uses: ./.github/standalone-display/
+      - name: "Get SCADE installation directory"
+        uses: ansys/scade-actions/get-scade-dir@v2
+        id: get-scade-dir
         with:
-          scade-version: ${{ matrix.scade-version }}
-          model-path: 'model/scade-display/DisplayPanel.etp'
-          conf: 'Windows'
+          scade-version: "24.2"
 
-
-      # - name: "Zipping the standalone directory"
-      #   run: |
-      #     powershell Compress-Archive ./model/scade-display/DisplayPanel_Exe SmartBoilerStandalone.zip
+      - name: "Generate Standalone"
+        uses: ansys/scade-actions/display-generate@v2
+        with:
+          scade-dir: ${{ steps.get-scade-dir.outputs.scade-directory }}
+          project: 'model/scade-display/DisplayPanel.etp'
+          configuration: 'Windows'
 
       - name: "Upload folder to  artifacts"
         uses: actions/upload-artifact@v4
@@ -121,7 +123,7 @@ jobs:
     name: "Deploy development documentation"
     # Deploy development only when merging or pushing to the 'main' branch
     runs-on: ubuntu-latest
-    needs: [standalone-display, scade-test-display]
+    needs: [standalone-display, scade-test-display, doc-build]
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     steps:
       - uses: ansys/actions/doc-deploy-dev@v7
