--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -111,14 +111,58 @@ jobs:
   release:
     name: "Release project"
     runs-on: ubuntu-latest
-    needs: [standalone-display, scade-test-display]
+    needs: [standalone-display, scade-test-display, doc-build]
     if: github.event_name == 'push' && contains(github.ref, 'refs/tags')
     steps:
-      - name: "Release to GitHub"
-        uses: ansys/actions/release-github@v7
-        with:
-          library-name: ${{ env.LIBRARY_NAME }}
-          additional-artifacts: ${{ env.ARTIFACT_NAME }}
+
+    - name: "Download HTML documentation"
+      uses: actions/download-artifact@v4
+      with:
+        name: documentation-html
+        path: documentation-html
+
+    - name: "Zip HTML documentation"
+      uses: vimtor/action-zip@v1.2
+      with:
+        files: documentation-html
+        dest: documentation-html.zip
+
+    - name: "Download PDF documentation"
+      uses: actions/download-artifact@v4
+      with:
+        name: documentation-pdf
+        path: documentation-pdf
+
+    - name: "Zip PDF documentation"
+      uses: vimtor/action-zip@v1.2
+      with:
+        files: documentation-pdf
+        dest: documentation-pdf.zip
+
+    - name: "Download Standalone"
+      uses: actions/download-artifact@v4
+      with:
+        name: ${{ env.ARTIFACT_NAME }}
+        path: ${{ env.ARTIFACT_NAME }}
+
+    - name: "Zip Standalone"
+      uses: vimtor/action-zip@v1.2
+      with:
+        files: ${{ env.ARTIFACT_NAME }}
+        dest: ${{ env.ARTIFACT_NAME }}.zip
+
+    - name: "Display the structure of downloaded files"
+      shell: bash
+      run: ls -R
+
+    - name: "Release to GitHub"
+      uses: softprops/action-gh-release@v2
+      with:
+        generate_release_notes: true
+        files: |
+          documentation-html.zip
+          documentation-pdf.zip
+          ${{ env.ARTIFACT_NAME }}.zip
 
   doc-deploy-dev:
     name: "Deploy development documentation"
