--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -59,7 +59,7 @@ jobs:
     - name: Set an output variable on Windows
       id: set-value-bash
       run: |
-        clinfo >> $GITHUB_OUTPUT
+        clinfo
       shell: bash
 
 
