--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -70,7 +70,7 @@ jobs:
           echo "Running user: $USER"
           echo "Available GPUs:"
           dxdiag /t dxdiag_output.txt
-          cat dxdiag_output.txt
+          # cat dxdiag_output.txt
       shell: cmd
 
 
