add   MAIN_PYTHON_VERSION env var

--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -12,6 +12,7 @@ env:
   DOCUMENTATION_CNAME: 'smart-boiler-control.examples.scade.docs.pyansys.com'
   LIBRARY_NAME: 'ansys-scade-examples-smart-boiler-control'
   ARTIFACT_NAME: 'SmartBoilerStandaloneExecutable'
+  MAIN_PYTHON_VERSION: '3.10'
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -46,7 +47,8 @@ jobs:
           skip-install: true
           use-python-cache: false
           dependencies: "texlive-fonts-extra qpdf"
-          check-links: false
+          python-version: ${{ env.MAIN_PYTHON_VERSION }}
+
 
 
   standalone-display:
