ci: attempt to fix doc-build

--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -46,7 +46,7 @@ jobs:
         with:
           skip-install: true
           use-python-cache: false
-          dependencies: "texlive-fonts-extra qpdf"
+          dependencies: "qpdf"
           python-version: ${{ env.MAIN_PYTHON_VERSION }}
 
 
