--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -12,6 +12,7 @@ env:
   DOCUMENTATION_CNAME: 'smart-boiler-control.examples.scade.docs.pyansys.com'
   LIBRARY_NAME: 'ansys-scade-examples-smart-boiler-control'
   ARTIFACT_NAME: 'SmartBoilerStandaloneExecutable'
+  MAIN_PYTHON_VERSION: '3.10'
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -45,8 +46,10 @@ jobs:
         with:
           skip-install: true
           use-python-cache: false
-          dependencies: "texlive-fonts-extra qpdf"
-          check-links: false
+          dependencies: "qpdf"
+          python-version: ${{ env.MAIN_PYTHON_VERSION }}
+
+
 
   standalone-display:
     name: "Standalone Display"
@@ -84,7 +87,7 @@ jobs:
 
   scade-test-display:
     name: "Run Test Execution"
-    runs-on: [self-hosted, 'SCADE']
+    runs-on: [self-hosted, 'SCADE', 'GRAPHICS']
     needs: [code-style]
     steps:
       - name: "Checkout code"
@@ -103,7 +106,13 @@ jobs:
           test-project: 'model/scade-test/SmartBoilerControl_Test.etp'
           configuration: 'Test'
           results-project: 'model/scade-test/SmartBoilerControl_Results.etp'
+          junit-report: 'junit-reports\SmartBoilerControl.xml'
           checkout: false
+      - name: "Publish Test Report"
+        uses: mikepenz/action-junit-report@v5
+        if: success() || failure() # always run even if the previous step fails
+        with:
+          report_paths: './junit-reports/SmartBoilerControl.xml'
 
   release:
     name: "Release project"
